manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: app2 
  namespace: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2 
    spec:
      containers:
        - name: cameracheck 
          image: corpprodstoreseverseenacr.azurecr.io/camera_check
          ports:
          - containerPort: 80
      imagePullSecrets:
          - name: regcred
