manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: app2
    namespace: app2
spec:
    type: ClusterIP
    ports:
    - protocol: TCP
      port: 80 
      targetPort: 80
    selector:
        app: app2
